Fix review sidebar item widths
The previous grid layout supported four columns but certain evaluation
strings would generate overlaps.  This modifies the CSS to ensure each
column has enough space to render the currently known possible values.

I did spend some time trying to find a solution that would dynamically
fill the full grid width even in cases where there are only three
columns, but couldn't find a pure-CSS solution in my time box.  This
does mean that in cases where the user doesn't have access to the
"Actions" associated with a review they are losing 25% (the fourth
column) of real estate for no reason.  This might be worth exploring
again in future.

Issue #2729

--- a/hypha/static_src/src/sass/apply/components/_reviews-sidebar.scss
+++ b/hypha/static_src/src/sass/apply/components/_reviews-sidebar.scss
@@ -22,7 +22,7 @@
 
         @supports (display: grid) {
             display: grid;
-            grid-template-columns: 45% 15% 15% 25%;
+            grid-template-columns: 45% 20% 10% 25%;
             grid-gap: 5px;
         }
 
